--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     <meta charset="utf-8">
     <title>Mattress Website</title>
 
-  <!-- CSS -->
-    <link rel="stylesheet" href="/css/normalize.min.css">
-
+  <!-- CSS --> <!-- normalize always first to reset-->
+    <link rel="stylesheet" href="css/normalize.min.css">
+    <link rel="stylesheet" href="css/gridlex.min.css">
+    
     <!-- All third party above this line -->
     <link rel="stylesheet" href="css/main.css">
   </head>
