Added content section

--- a/index.html
+++ b/index.html
@@ -9,12 +9,39 @@
   <!-- CSS --> <!-- normalize always first to reset-->
     <link rel="stylesheet" href="css/normalize.min.css">
     <link rel="stylesheet" href="css/gridlex.min.css">
-    
+
     <!-- All third party above this line -->
     <link rel="stylesheet" href="css/main.css">
   </head>
 
   <body>
+
+    <!-- Banner -->
+    <section class="grid-middle-center">
+      <div class="col-6">
+        <h3>Sleep like a baby</h3>
+        <h1>The ultimate mattress solution</h1>
+      </div>
+    </section>
+
+    <section class="grid">
+      <div class="col-6"></div>
+      <div class="col-6">
+        <h2>built to last a lifetime</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      </div>
+      <div class="col-6">
+        <h2>so soft you'll melt</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      </div>
+      <div class="col-6"></div>
+    </section>
+
+    <section class="grid-middle-center">
+      <div class="col-6">
+        
+      </div>
+    </section>
 
   </body>
 </html>
