html structure done

--- a/index.html
+++ b/index.html
@@ -17,13 +17,14 @@
   <body>
 
     <!-- Banner -->
-    <section class="grid-middle-center">
-      <div class="col-6">
+    <section class="grid-middle">
+      <div class="col-12">
         <h3>Sleep like a baby</h3>
         <h1>The ultimate mattress solution</h1>
       </div>
     </section>
 
+    <!-- content -->
     <section class="grid">
       <div class="col-6"></div>
       <div class="col-6">
@@ -37,11 +38,34 @@
       <div class="col-6"></div>
     </section>
 
-    <section class="grid-middle-center">
-      <div class="col-6">
-        
+    <!-- quote -->
+    <section class="grid-middle">
+      <div class="col-12">
+        <h5>never underestimate the power of</h5>
+        <h4>a good night's sleep</h4>
       </div>
     </section>
+
+    <!-- testimonial -->
+    <section class="grid">
+      <div class="col-10">
+        <q>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</q>
+        <p>a very happy customer</p>
+      </div>
+    </section>
+
+    <!-- contact form -->
+    <section class="grid">
+      <div class="col-6">
+        <h6>let's connect</h6>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+      </div>
+      <div class="col-6 grid">
+        <div class="col-12">your name</div>
+        <div class="col-12">your email</div>
+        <div class="col-12">tell us what you think</div>
+        <div class="col-12">submit</div>
+      </div>
 
   </body>
 </html>
