CSS banner finished

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <!-- CSS --> <!-- normalize always first to reset-->
     <link rel="stylesheet" href="css/normalize.min.css">
     <link rel="stylesheet" href="css/gridlex.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400,700">
 
     <!-- All third party above this line -->
     <link rel="stylesheet" href="css/main.css">
@@ -17,10 +18,10 @@
   <body>
 
     <!-- Banner -->
-    <section class="grid-middle">
-      <div class="col-12">
-        <h3>Sleep like a baby</h3>
-        <h1>The ultimate mattress solution</h1>
+    <section class="grid-middle-center banner">
+      <div class="col-12 text-center text-white">
+        <h3 class="roboto-regular"><span class="text-yellow">sleep</span> like a baby</h3>
+        <h1 class="roboto-regular">the ultimate mattress solution</h1>
       </div>
     </section>
 
@@ -28,11 +29,11 @@
     <section class="grid">
       <div class="col-6"></div>
       <div class="col-6">
-        <h2>built to last a lifetime</h2>
+        <h2>built to last a <span class="text-yellow">lifetime</span></h2>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
       </div>
       <div class="col-6">
-        <h2>so soft you'll melt</h2>
+        <h2>so <span class="text-yellow">soft</span> you'll melt</h2>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
       </div>
       <div class="col-6"></div>
@@ -57,7 +58,7 @@
     <!-- contact form -->
     <section class="grid">
       <div class="col-6">
-        <h6>let's connect</h6>
+        <h6>let's <span class="text-yellow">connect</span></h6>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
       </div>
       <div class="col-6 grid">
