--- a/index.html
+++ b/index.html
@@ -29,26 +29,26 @@
     <section class="grid-middle">
       <div class="col-6 dog"></div>
       <div class="col-6">
-        <h2 class="roboto-regular">built to last a <span class="text-yellow">lifetime</span></h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <h2 class="roboto-regular padding-left-right">built to last a <span class="text-yellow">lifetime</span></h2>
+          <p class="padding-left-right">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
       </div>
       <div class="col-6">
-        <h2 class="roboto-regular">so <span class="text-yellow">soft</span> you'll melt</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <h2 class="roboto-regular padding-left-right">so <span class="text-yellow">soft</span> you'll melt</h2>
+          <p class="padding-left-right">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
       </div>
       <div class="col-6 bed"></div>
     </section>
 
     <!-- quote -->
-    <section class="grid-middle">
+    <section class="grid-middle pencil text-center">
       <div class="col-12">
-        <h5>never underestimate the power of</h5>
-        <h4>a good night's sleep</h4>
+        <h5 class="roboto-regular">never underestimate the power of</h5>
+        <h4 class="roboto-bold">a good night's <span class=text-white>sleep</h4>
       </div>
     </section>
 
     <!-- testimonial -->
-    <section class="grid">
+    <section class="grid-middle text-center">
       <div class="col-10">
         <q>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</q>
         <p>a very happy customer</p>
