added margin helpers

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     <!-- Banner -->
     <section class="grid-middle-center banner">
       <div class="col-12 text-center text-white">
-        <h3 class="roboto-regular"><span class="text-yellow">sleep</span> like a baby</h3>
-        <h1 class="roboto-regular">the ultimate mattress solution</h1>
+        <h3 class="roboto-regular margin-top-bottom-none"><span class="text-yellow">sleep</span> like a baby</h3>
+        <h1 class="roboto-regular margin-bottom-none">the ultimate mattress solution</h1>
       </div>
     </section>
 
@@ -39,16 +39,16 @@
       <div class="col-6 bed"></div>
     </section>
 
-    <!-- quote -->
-    <section class="grid-middle pencil text-center">
-      <div class="col-12">
-        <h5 class="roboto-regular">never underestimate the power of</h5>
-        <h4 class="roboto-bold">a good night's <span class=text-white>sleep</h4>
+    <!-- tagline -->
+    <section class="grid-middle pencil">
+      <div class="col-12 text-center margin-top-bottom-none roboto-regular">
+        <h5>never underestimate the power of</h5>
+        <h4>a good night's <span class=text-white>sleep</h4>
       </div>
     </section>
 
     <!-- testimonial -->
-    <section class="grid-middle text-center">
+    <section class="grid-middle text-center margin-top-bottom-none">
       <div class="col-10">
         <q>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</q>
         <p>a very happy customer</p>
