tagline section done

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <body>
 
     <!-- Banner -->
-    <section class="grid-middle-center banner">
+    <section class="grid-middle-center-noGutter-noBottom banner">
       <div class="col-12 text-center text-white">
         <h3 class="roboto-regular margin-top-bottom-none"><span class="text-yellow">sleep</span> like a baby</h3>
         <h1 class="roboto-regular margin-bottom-none">the ultimate mattress solution</h1>
@@ -40,10 +40,10 @@
     </section>
 
     <!-- tagline -->
-    <section class="grid-middle pencil">
-      <div class="col-12 text-center margin-top-bottom-none roboto-regular">
-        <h5>never underestimate the power of</h5>
-        <h4>a good night's <span class=text-white>sleep</h4>
+    <section class="grid-middle-noGutter-noBottom pencil">
+      <div class="col-12 text-center roboto-regular">
+        <h5 class="margin-top-bottom-none special-margin">never underestimate the power of</h5>
+        <h4 class="margin-top-bottom-none">a good night's <span class="text-white">sleep</h4>
       </div>
     </section>
 
