quote section finished

--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
     </section>
 
     <!-- testimonial -->
-    <section class="grid-middle text-center margin-top-bottom-none">
-      <div class="col-10">
-        <q>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</q>
-        <p>a very happy customer</p>
+    <section class="grid-middle-center-noGutter-noBottom quote roboto-regular">
+      <div class="col-8">
+        <q>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</q>
+        <p class="text-right margin-bottom-none">a very happy customer</p>
       </div>
     </section>
 
