form finished and design updates

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <section class="grid-middle-center-noGutter-noBottom banner">
       <div class="col-12 text-center text-white">
         <h3 class="roboto-regular margin-top-bottom-none"><span class="text-yellow">sleep</span> like a baby</h3>
-        <h1 class="roboto-regular margin-bottom-none">the ultimate mattress solution</h1>
+        <h1 class="roboto-regular margin-top-bottom-none">the ultimate mattress solution</h1>
       </div>
     </section>
 
@@ -42,7 +42,7 @@
     <!-- tagline -->
     <section class="grid-middle-noGutter-noBottom pencil">
       <div class="col-12 text-center roboto-regular">
-        <h5 class="margin-top-bottom-none special-margin">never underestimate the power of</h5>
+        <h5 class="margin-top-bottom-none">never underestimate the power of</h5>
         <h4 class="margin-top-bottom-none">a good night's <span class="text-white">sleep</h4>
       </div>
     </section>
@@ -50,25 +50,28 @@
     <!-- testimonial -->
     <section class="grid-middle-center-noGutter-noBottom quote roboto-regular">
       <div class="col-8">
-        <q>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</q>
+        <q>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </q>
         <p class="text-right margin-bottom-none">a very happy customer</p>
       </div>
     </section>
 
-    <!-- contact form -->
+    <!-- contact form section -->
+    <!-- let's connect copy -->
     <section class="grid-middle-center-noGutter-noBottom contact-form text-white">
       <div class="col-6">
         <div class=padding-left-right>
-          <h6 class="roboto-bold margin-top-bottom-none">let's <br> <span class="text-yellow">connect</span></h6>
+          <h6 class="roboto-bold margin-top-bottom-none">let's <span class="text-yellow contact-form-yellow">connect</span></h6>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
         </div>
       </div>
+
+      <!-- contact form input-->
       <div class="col-6">
-        <form class="padding-left-right">
-          <input type="text" placeholder="Your name">
-          <input type="email" placeholder="Your email">
-          <textarea placeholder="tell us how many mattresses you'd like"></textarea>
-          <button type="submit">hit me</button>
+        <form class="padding-left-right" method="POST" action="https://formspree.io/anna.franklyn@gmail.com">
+          <input type="text" name="name" placeholder="your name">
+          <input type="email" name="email" placeholder="your email">
+          <textarea name="message" placeholder="your message"></textarea>
+          <button type="submit">Submit</button>
         </form>
       </div>
 
